# gski

./: .gitignore  AGENTS.md  pyproject.toml
docs/: gemini_audio_understanding.md  gemini_deep_research.md  gemini_docs.md  gemini_image_generation_code_samples.py  gemini_image_understanding_code_samples.py  gemini_structred_outputs.md  gemini_text.md  image-generation.md  image-generation.txt  openai_image2.md
gski/: audioscope.py  cli.py  deepresearch.py  gptimage2.py  llm_process.py  models.py  nanobanana.py  nanoscope.py  setup.py  solver.py  websearch.py  youtube_scope.py
gski/deepresearch_lib/: api.py  format.py  resolve.py  state.py
gski/skills/audioscope/: SKILL.md
gski/skills/deepresearch/: SKILL.md
gski/skills/gptimage2/: SKILL.md
gski/skills/llm-process/: SKILL.md
gski/skills/nanobanana/: SKILL.md
gski/skills/nanoscope/: SKILL.md
gski/skills/solver/: SKILL.md
gski/skills/websearch/: SKILL.md
gski/skills/youtube-scope/: SKILL.md
gski/solver_data/: hats.py  lateral.py  scamper.py  triz.py
